# deskbrid

./: .codex-prompt.md  .gitignore  AGENTS.md  BACKENDS.md  CHANGELOG.md  CLAUDE.md  CODEX_CODE_REVIEW.md  CODE_REVIEW_VEX.md  CODE_REVIEW_VEX_V1.md  CODE_REVIEW_VEX_V2.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  HERMES_PLUGIN.md  LICENSE  LINUX_CONTROL.md  MCP_ATSPI_DESIGN.md  MCP_INTEGRATION.md  PROTOCOL.md  README.md  ROADMAP.md  demo.sh  glama.json  permissions.example.toml  resolve_pr11.py  server.json
.github/workflows/: ci.yml  release.yml  (+3 more)
clients/python/: README.md  pyproject.toml
clients/python/deskbrid/: __init__.py  actions_async.py  actions_sync.py  async_client.py  client.py  errors.py  models.py  sync_client.py
clients/python/deskbrid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clients/python/tests/: test_client.py
deploy/: deskbrid.service  org.deskbrid.policy
docs/: API.md  ARCHITECTURE.md  BACKENDS.md  BACKEND_PARITY.md  CHANGELOGv1.0.0.md  CODE_REVIEW_VEX.md  CONTRIBUTING.md  DEPENDENCIES.md  DE_TEST_MATRIX.md  PROTOCOL.md  PROXMOX.md  README.md  ROADMAP.md  TESTING_NEEDED.md  TEST_PLAN.md  deskbrid-v1.0.0.md  permissions.example.toml  v2-protocol-spec.md
hermes/: deskbrid.md  deskbrid.toml
scripts/: screenshot_portal.py
site/: index.html  install.sh
site-v2/: index.html
src/: a11y.rs  abs_pointer.rs  browser.rs  capture.rs  cli.rs  client.rs  clipboard.rs  color.rs  daemon.rs  events.rs  lib.rs  main.rs  ocr.rs  permissions.rs  protocol.rs  setup.rs  tray.rs  util.rs  visual.rs
tests/: linux_session_smoke.rs
(+482 files in other folders)
